--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="src/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     
     <title>♠♥♣♦Mesas de Poker CC♠♥♣♦</title>
 </head>
-<body>
+<body class="bg-black">
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top border-bottom">
                 <div class="container">
@@ -36,7 +37,7 @@
                         </ul>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Quienes Somos</a>
+                        <a class="nav-link" href="#cards">Quienes Somos</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">Contáctenos</a>
@@ -45,6 +46,7 @@
                   </div>
                 </div>
               </nav>
+            </header>
               <div id="carouselExampleCaptions" class="carousel slide">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -99,9 +101,54 @@
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
-        </header>
         <main>
-
+          <section id="cards">
+                <div class="row row-cols-1 row-cols-md-4 g-4">
+                    <div class="col">
+                        <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
+                          <img src="src/img/products/38.png" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Mesas de Poker</h5>
+                            <p class="card-text">Explora nuestra colección de mesas de póker, desde las estándar para noches casuales hasta las lujosas
+                               mesas deluxe. Encuentra aqui la mesa perfecta.</p>
+                            <div class="text-center">
+                            <a href="#" class="btn btn-primary">Ver mas</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="col">
+                      <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
+                        <img src="src/img/products/34.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                      </div>
+                    <div class="col">
+                      <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
+                        <img src="src/img/products/14.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
+                        <img src="src/img/products/232.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+        </section>
         </main>
         <footer>
             
