--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="src/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    
     <title>♠♥♣♦Mesas de Poker CC♠♥♣♦</title>
 </head>
 <body class="bg-black">
@@ -25,19 +23,10 @@
                         <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                       </li>
                       <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Productos
-                        </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#">Mesas</a></li>
-                          <li><a class="dropdown-item" href="#">Portavasos</a></li>
-                          <li><a class="dropdown-item" href="#">Ficheros</a></li>
-                          <li><a class="dropdown-item" href="#">Luces Led</a></li>
-                          <li><a class="dropdown-item" href="#">Puertos USB</a></li>
-                        </ul>
+                        <a class="nav-link" href="#cards">Productos</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#cards">Quienes Somos</a>
+                        <a class="nav-link" href="#">Quienes Somos</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">Contáctenos</a>
@@ -46,7 +35,7 @@
                   </div>
                 </div>
               </nav>
-            </header>
+        </header>
               <div id="carouselExampleCaptions" class="carousel slide">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -103,51 +92,62 @@
               </div>
         <main>
           <section id="cards">
-                <div class="row row-cols-1 row-cols-md-4 g-4">
-                    <div class="col">
-                        <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
-                          <img src="src/img/products/38.png" class="card-img-top" alt="...">
-                          <div class="card-body">
-                            <h5 class="card-title">Mesas de Poker</h5>
-                            <p class="card-text">Explora nuestra colección de mesas de póker, desde las estándar para noches casuales hasta las lujosas
-                               mesas deluxe. Encuentra aqui la mesa perfecta.</p>
-                            <div class="text-center">
-                            <a href="#" class="btn btn-primary">Ver mas</a>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    <div class="col">
-                      <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
-                        <img src="src/img/products/34.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                      </div>
-                      </div>
-                    <div class="col">
-                      <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
-                        <img src="src/img/products/14.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                      </div>
+            <br>
+            <br>  
+            <br>
+            <br>
+            <div class="row row-cols-1 row-cols-md-4 g-4">
+              <div class="col-sm-3">
+                <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
+                  <div class="text-center">
+                  <img src="src/img/products/38.png" class="card-img-top" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Mesas de Poker</h5>
+                    <p class="card-text">Explora nuestra colección de mesas de póker, desde las estándar para noches casuales hasta las lujosas mesas deluxe. Encuentra aqui la mesa perfecta.</p>
+                    <div class="text-center">
+                      <a href="#" class="btn btn-primary btn-block">Ver mas</a>
                     </div>
-                    <div class="col">
-                      <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
-                        <img src="src/img/products/232.png" class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                      </div>
-                    </div>
+                  </div>
                 </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
+                  <img src="src/img/products/34.png" class="card-img-top" alt="..." style="margin-bottom: 10px;">
+                  <div class="card-body">
+                    <h5 class="card-title">Ruletas</h5>
+                    <p class="card-text"  style="margin-bottom: 40px;">Diseño personalizado para ruletas únicas. Crea una experiencia de juego exclusiva y memorable con nuestras mesas hechas a medida.</p>
+                    <div class="text-center">
+                      <a href="#" class="btn btn-primary btn-block">Ver mas</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
+                  <img src="src/img/products/14.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Mesas de Arrime</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <div class="text-center">
+                      <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-3">
+                <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
+                  <img src="src/img/products/232.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <div class="text-center">
+                      <a href="#" class="btn btn-primary btn-block">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
         </section>
         </main>
         <footer>
