Secciones Quienes somos y contactenos creadas

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
               <a class="nav-link" href="#cards">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Quienes Somos</a>
+              <a class="nav-link" href="#quienes-somos">Quienes Somos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contáctenos</a>
+              <a class="nav-link" href="#contactenos">Contáctenos</a>
             </li>
           </ul>
         </div>
@@ -111,10 +111,6 @@
   </div>
   <main>
     <section id="cards">
-      <br>
-      <br>
-      <br>
-      <br>
       <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col-sm-3">
           <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
@@ -164,7 +160,8 @@
             <img src="src/img/products/14.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Accesorios</h5>
-              <p class="card-text" style="margin-bottom: 25px;">Aquí encontrarás los mejores accesorios y repuestos para tu mesa de póquer, como
+              <p class="card-text" style="margin-bottom: 25px;">Aquí encontrarás los mejores accesorios y repuestos para
+                tu mesa de póquer, como
                 portavasos, luces LED, puertos USB y mucho más.</p>
               <div class="text-center">
                 <a href="#" class="btn btn-primary btn-block">Ver más</a>
@@ -175,45 +172,47 @@
       </div>
     </section>
     <section id="quienes-somos">
+      <br>
       <h2>Quiénes Somos</h2>
-      <p>En **MesasDePokerCC** somos apasionados del juego y de la experiencia que este genera. Creemos que cada partida, sea de **poker, ruleta, punto y banca, burako o blackjack**, es una oportunidad para crear momentos inolvidables con amigos y familiares.</p>
-      <p>Por eso, nos dedicamos a la fabricación artesanal de **mesas de juego de alta calidad**, con diseños únicos y personalizables, para que disfrutes al máximo de tu pasión.</p>
+      <p>En **MesasDePokerCC** somos apasionados del juego y de la experiencia que este genera. Creemos que cada
+        partida, sea de **poker, ruleta, punto y banca, burako o blackjack**, es una oportunidad para crear momentos
+        inolvidables con amigos y familiares.</p>
+      <p>Por eso, nos dedicamos a la fabricación artesanal de **mesas de juego de alta calidad**, con diseños únicos y
+        personalizables, para que disfrutes al máximo de tu pasión.</p>
+      <div class="historia">
+        <h2>Nuestra historia</h2>
+        <p>Somos un emprendimiento joven que comenzó hace unos años con un sueño: crear mesas de juego que combinaran
+          calidad, funcionalidad y estilo. Desde entonces, hemos trabajado con dedicación para convertirnos en una
+          referencia en el mercado.</p>
+      </div>
+      <div class="diferencias">
+        <h2>Lo que nos diferencia</h2>
+        <ul>
+          <li>**Materiales de primera calidad:** Seleccionamos cuidadosamente los mejores materiales para garantizar la
+            durabilidad y resistencia de nuestras mesas.</li>
+          <li>**Diseños únicos:** Ofrecemos una amplia variedad de diseños para que encuentres la mesa que mejor se
+            adapte a tu estilo y necesidades.</li>
+          <li>**Personalización:** Puedes personalizar tu mesa con diferentes colores, tapizados y accesorios.</li>
+          <li>**Fabricación artesanal:** Cada mesa es elaborada con cuidado y atención al detalle por nuestros expertos
+            artesanos.</li>
+          <li>**Atención al cliente:** Nos preocupamos por ofrecer un servicio al cliente excepcional, brindándote
+            asesoramiento y asistencia en todo momento.</li>
+        </ul>
+      </div>
+      <div class="productos">
+        <h2>En MesasDePokerCC encontrarás:</h2>
+        <ul>
+          <li>Mesas de poker</li>
+          <li>Mesas de ruleta</li>
+          <li>Mesas de punto y banca</li>
+          <li>Mesas de burako</li>
+          <li>Mesas de blackjack</li>
+          <li>Accesorios como portavasos, ficheros, luces led, puertos USB</li>
+        </ul>
+      </div>
     </section>
-    <div class="historia">
-      <h2>Nuestra historia</h2>
-      <p>Somos un emprendimiento joven que comenzó hace unos años con un sueño: crear mesas de juego que combinaran calidad, funcionalidad y estilo. Desde entonces, hemos trabajado con dedicación para convertirnos en una referencia en el mercado.</p>
-    </div>
-    <div class="diferencias">
-      <h2>Lo que nos diferencia</h2>
-      <ul>
-        <li>**Materiales de primera calidad:** Seleccionamos cuidadosamente los mejores materiales para garantizar la durabilidad y resistencia de nuestras mesas.</li>
-        <li>**Diseños únicos:** Ofrecemos una amplia variedad de diseños para que encuentres la mesa que mejor se adapte a tu estilo y necesidades.</li>
-        <li>**Personalización:** Puedes personalizar tu mesa con diferentes colores, tapizados y accesorios.</li>
-        <li>**Fabricación artesanal:** Cada mesa es elaborada con cuidado y atención al detalle por nuestros expertos artesanos.</li>
-        <li>**Atención al cliente:** Nos preocupamos por ofrecer un servicio al cliente excepcional, brindándote asesoramiento y asistencia en todo momento.</li>
-      </ul>
-    </div>
-    <div class="productos">
-      <h2>En [Nombre de tu empresa] encontrarás:</h2>
-      <ul>
-        <li>Mesas de poker</li>
-        <li>Mesas de ruleta</li>
-        <li>Mesas de punto y banca</li>
-        <li>Mesas de burako</li>
-        <li>Mesas de blackjack</li>
-        <li>Accesorios como portavasos, ficheros, luces led, puertos USB</li>
-      </ul>
-    </div>
-    <div class="mision-vision">
-      <h2>Nuestra misión</h2>
-      <p>Nuestra misión es proporcionar a nuestros clientes las mejores mesas de juego del mercado, para que puedan disfrutar al máximo de su pasión por el juego.</p>
-      <h2>Nuestra visión</h2>
-      <p>Ser la empresa líder en la fabricación y venta de mesas de juego de alta calidad, reconocida por su excelencia y compromiso con la satisfacción del cliente.</p>
-    </div>
-    <div class="llamada-accion">
-      <h2>Te invitamos a conocer nuestro catálogo y descubrir la mesa de juego perfecta para ti.</h2>
-      <a href="#">Ver catálogo</a>
-    </div>
+    <section id="contactenos">
+      <iframe width="520" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=Carmen%20105%20Las%20Flores+(Mesas%20de%20Poker%20CC)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe> <a href='http://maps-website.com/es'>Maps Generator</a> <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=8b16fc57e56f31c83b71a7ba410b742a3725e8ee'></script>    </section>
   </main>
   <footer>
 
