--- a/index.html
+++ b/index.html
@@ -173,19 +173,38 @@
     </section>
     <section id="quienes-somos">
       <br>
-      <h2>Quiénes Somos</h2>
-      <p>En **MesasDePokerCC** somos apasionados del juego y de la experiencia que este genera. Creemos que cada
-        partida, sea de **poker, ruleta, punto y banca, burako o blackjack**, es una oportunidad para crear momentos
-        inolvidables con amigos y familiares.</p>
-      <p>Por eso, nos dedicamos a la fabricación artesanal de **mesas de juego de alta calidad**, con diseños únicos y
-        personalizables, para que disfrutes al máximo de tu pasión.</p>
-      <div class="historia">
-        <h2>Nuestra historia</h2>
-        <p>Somos un emprendimiento joven que comenzó hace unos años con un sueño: crear mesas de juego que combinaran
-          calidad, funcionalidad y estilo. Desde entonces, hemos trabajado con dedicación para convertirnos en una
-          referencia en el mercado.</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8">
+            <h2>Quiénes Somos</h2>
+            <p>En **MesasDePokerCC** somos apasionados del juego y de la experiencia que este genera. Creemos que cada
+              partida, sea de **poker, ruleta, punto y banca, burako o blackjack**, es una oportunidad para crear
+              momentos
+              inolvidables con amigos y familiares.</p>
+            <p>Por eso, nos dedicamos a la fabricación artesanal de **mesas de juego de alta calidad**, con diseños
+              únicos
+              y personalizables, para que disfrutes al máximo de tu pasión.</p>
+          </div>
+          <div class="col-md-4">
+            <img src="src/img/carpinteria.jpg" alt="carpinteria" style="border-radius: 100%; margin-left: 2vw;">
+          </div>
+        </div>
       </div>
-      <div class="diferencias">
+      <div class="container" style="margin-top: 5vw;">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="src/img/carpinteria2.jpg" alt="carpinteria" style="border-radius: 100%; margin-left: 2vw;">
+          </div>
+          <div class="col-md-8">
+            <h2>Nuestra historia</h2>
+            <p>Somos un emprendimiento joven que comenzó hace unos años con un sueño: crear mesas de juego que
+              combinaran
+              calidad, funcionalidad y estilo. Desde entonces, hemos trabajado con dedicación para convertirnos en una
+              referencia en el mercado.</p>
+          </div>
+        </div>
+      </div>
+      <div class="container" style="margin-top: 3rem;">
         <h2>Lo que nos diferencia</h2>
         <ul>
           <li>**Materiales de primera calidad:** Seleccionamos cuidadosamente los mejores materiales para garantizar la
@@ -199,7 +218,7 @@
             asesoramiento y asistencia en todo momento.</li>
         </ul>
       </div>
-      <div class="productos">
+      <div class="container" style="margin-top: 3rem;">
         <h2>En MesasDePokerCC encontrarás:</h2>
         <ul>
           <li>Mesas de poker</li>
@@ -212,7 +231,10 @@
       </div>
     </section>
     <section id="contactenos">
-      <iframe width="520" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=Carmen%20105%20Las%20Flores+(Mesas%20de%20Poker%20CC)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe> <a href='http://maps-website.com/es'>Maps Generator</a> <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=8b16fc57e56f31c83b71a7ba410b742a3725e8ee'></script>    </section>
+      <div class="container">
+      <iframe class="mapa" width="400" height="400" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=Carmen%20105%20Las%20Flores+(Mesas%20de%20Poker%20CC)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+      </div>     
+    </section>
   </main>
   <footer>
 
