--- a/index.html
+++ b/index.html
@@ -232,8 +232,39 @@
     </section>
     <section id="contactenos">
       <div class="container">
-      <iframe class="mapa" width="400" height="400" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=Carmen%20105%20Las%20Flores+(Mesas%20de%20Poker%20CC)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
-      </div>     
+        <h1>Contactenos</h1>
+        <div class="row">
+          <div class="col">
+            <div class="container marco">
+              <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingrese su nombre">
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+                <a class="btnWA" href="https://wa.me/5492244445033?text=Hola,%20esto%20es%20un%20mensaje%20predefinido">
+                  <img src="src/img/whatsapp.svg">
+                  <p>Enviar</p>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="row">
+              <div class="col-md-6">
+                <h4>Las Flores</h4>
+                <h5>Prov. Buenos Aires</h5>
+                <h6>Av. Carmen 105</h6>
+              </div>
+              <div class="col-md-6">
+                <iframe class="mapa" width="200" height="200"
+                  src="https://maps.google.com/maps?width=200&amp;height=200&amp;hl=en&amp;q=Carmen%20105%20Las%20Flores+(Mesas%20de%20Poker%20CC)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
   <footer>
