--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon">
-  <link rel="stylesheet" href="src/css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="src/css/style.css">
+  <script defer src="src/js/funciones.js"></script>
   <title>♠♥♣♦Mesas de Poker CC♠♥♣♦</title>
 </head>
 
@@ -24,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              <a class="nav-link" aria-current="page" href="#">Inicio</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link" href="#cards">Productos</a>
@@ -112,7 +113,7 @@
   <main>
     <section id="cards">
       <div class="row row-cols-1 row-cols-md-4 g-4">
-        <div class="col-sm-3">
+        <div class="col-sm-3 d-flex justify-content-center">
           <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
             <div class="text-center">
               <img src="src/img/products/38.png" class="card-img-top" alt="...">
@@ -127,7 +128,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 d-flex justify-content-center">
           <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
             <img src="src/img/products/34.png" class="card-img-top" alt="..." style="margin-bottom: 10px;">
             <div class="card-body">
@@ -140,7 +141,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 d-flex justify-content-center">
           <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
             <div class="text-center">
               <img src="src/img/products/232.png" class="card-img-top" style="width: 12rem;" alt="...">
@@ -155,7 +156,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-3">
+        <div class="col-sm-3 d-flex justify-content-center">
           <div class="card h-100 text-bg-dark mb-3" style="width: 18rem;">
             <img src="src/img/products/14.png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -231,10 +232,11 @@
       </div>
     </section>
     <section id="contactenos">
+      <br>
       <div class="container">
         <h1>Contactenos</h1>
         <div class="row">
-          <div class="col">
+          <div class="col-sm-6 col-md-4 col-xl-5">
             <div class="container marco">
               <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Nombre</label>
@@ -243,32 +245,62 @@
               <div class="mb-3">
                 <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
-                <a class="btnWA" href="https://wa.me/5492244445033?text=Hola,%20esto%20es%20un%20mensaje%20predefinido">
+                <a class="btnWA" href="">
                   <img src="src/img/whatsapp.svg">
                   <p>Enviar</p>
                 </a>
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="row">
-              <div class="col-md-6">
+              <div class="col-sm-6 col-md-4 col-xl-4 d-flex justify-content-center">
+                <iframe class="mapa" width="300" height="300"
+                  src="https://maps.google.com/maps?width=300&amp;height=300&amp;hl=en&amp;q=Av.%20Carmen%20105%20Las%20Flores+(MesasDePokerCC.com.ar)&amp;t=&amp;z=18&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+              </div>
+              <div class="col-xl-3 justify-content-center" style="margin-top: 5%;">
                 <h4>Las Flores</h4>
                 <h5>Prov. Buenos Aires</h5>
                 <h6>Av. Carmen 105</h6>
+                <a href="https://www.instagram.com/mesaspokercc/" target="_blank">
+                  <img src="src/img/instagram.svg" alt="instagram">
+                </a>
+                <a href="https://www.facebook.com/profile.php?id=100063756120742" target="_blank">
+                  <img src="src/img/facebook.svg" alt="facebook">
+                </a>
               </div>
-              <div class="col-md-6">
-                <iframe class="mapa" width="200" height="200"
-                  src="https://maps.google.com/maps?width=200&amp;height=200&amp;hl=en&amp;q=Carmen%20105%20Las%20Flores+(Mesas%20de%20Poker%20CC)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
   </main>
-  <footer>
-
+  <footer class="footer">
+    <div class="row">
+      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="container-footer align-items-center">
+          <h5>Secciones</h5>
+          <a href="#">Inicio</a>
+          <a href="#cards">Productos</a>
+          <a href="#quienes-somos">Quiénes somos</a>
+          <a href="#contactenos">Contáctenos</a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-4 container align-items-center" style="margin-top: 2%;">
+          <a href="#"><img class="logo" src="src/img/favicon.png" alt="Logo"></a>
+          <img class="text-footer" src="src/img/mesasdepokercc.png" alt="mesasdepokercc">
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <div class="container-footer align-items-center">
+          <h5>Redes Sociales</h5>
+          <a href="https://www.instagram.com/mesaspokercc/" target="_blank">
+            <img src="src/img/instagram.svg" alt="instagram"> Instagram
+          </a>
+          <a href="https://www.facebook.com/profile.php?id=100063756120742" target="_blank">
+            <img src="src/img/facebook.svg" alt="facebook"> Facebook
+          </a>
+          <a href="https://wa.me/5492213091050" target="_blank">
+            <img src="src/img/whatsapp.svg" alt="whatsapp"> Whatsapp
+          </a>
+        </div>
+      </div>
+    </div>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
