--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <script defer src="src/js/funciones.js"></script>
+  <script defer src="src/js/index.js"></script>
   <title>♠♥♣♦Mesas de Poker CC♠♥♣♦</title>
 </head>
 
 <body class="bg-black">
+  <a href="http://" class="fixed-whatsapp">
+    <img src="src/img/assets/whatsapp.svg">
+  </a>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top border-bottom">
       <div class="container">
@@ -49,7 +52,7 @@
       </div>
     </nav>
   </header>
-  <div id="carouselExampleCaptions" class="carousel slide">
+  <div id="carouselExampleCaptions" class="carousel slide d-none d-md-block">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
@@ -93,7 +96,6 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
-
   <main>
     <section id="cards">
       <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -107,7 +109,7 @@
               <p class="card-text">Explora nuestra colección de mesas de póker, desde las estándar para noches casuales
                 hasta las lujosas mesas deluxe. Encuentra aqui la mesa perfecta.</p>
               <div class="text-center">
-                <a href="#" class="btn btn-primary btn-block">Ver más</a>
+                <a href="/src/html/productos.html" class="btn btn-primary btn-block">Ver más</a>
               </div>
             </div>
           </div>
@@ -120,7 +122,7 @@
               <p class="card-text" style="margin-bottom: 40px;">Diseño personalizado para ruletas únicas. Crea una
                 experiencia de juego exclusiva y memorable con nuestras mesas hechas a medida.</p>
               <div class="text-center">
-                <a href="#" class="btn btn-primary btn-block">Ver más</a>
+                <a href="/src/html/productos.html" class="btn btn-primary btn-block">Ver más</a>
               </div>
             </div>
           </div>
@@ -135,7 +137,7 @@
               <p class="card-text" style="margin-bottom: 25px;">Fichas de póker de alta calidad en varios colores,
                 modelos y estuches. Disfruta del póker en casa con la emoción del casino</p>
               <div class="text-center">
-                <a href="#" class="btn btn-primary btn-block">Ver más</a>
+                <a href="/src/html/productos.html" class="btn btn-primary btn-block">Ver más</a>
               </div>
             </div>
           </div>
@@ -149,7 +151,7 @@
                 tu mesa de póquer, como
                 portavasos, luces LED, puertos USB y mucho más.</p>
               <div class="text-center">
-                <a href="#" class="btn btn-primary btn-block">Ver más</a>
+                <a href="/src/html/productos.html" class="btn btn-primary btn-block">Ver más</a>
               </div>
             </div>
           </div>
@@ -220,7 +222,6 @@
       <div class="container">
         <h1 class="mt-1">Contáctenos</h1>
         <div class="row row-cols-1 row-cols-md-2 g-4 justify-content-around">
-          <!-- Columna para el formulario -->
           <div class="col-md-6">
             <div class="container marco p-4 rounded shadow">
               <h4 class="mb-4">Déjenos un mensaje</h4>
@@ -233,7 +234,7 @@
                   <label for="mensaje" class="form-label">Mensaje</label>
                   <textarea class="form-control" id="mensaje" rows="5" placeholder="Escriba su mensaje aquí"></textarea>
                 </div>
-                <a class="btnWA" href="https://wa.me/5492213091050">
+                <a class="btnWA" href="https://wa.me/5492213091050" target="_blank">
                   <img src="src/img/assets/whatsapp.svg">
                   <p>Enviar</p>
                 </a>
