--- a/src/html/productos.html
+++ b/src/html/productos.html
@@ -7,11 +7,12 @@
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/productos.css">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script defer src="/src/js/funciones.js"></script>
+    <script defer src="/src/js/productos.js"></script>
     <title>♠♥♣♦Mesas de Poker CC♠♥♣♦</title>
 </head>
 
@@ -19,8 +20,8 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top border-bottom">
         <div class="container">
-          <a href="#"><img class="logo" src="/src/img/favicon.png" alt="Logo"></a>
-          <img class="text-header" src="/src/img/mesasdepokercc.png" alt="mesasdepokercc">
+          <a href="#"><img class="logo" src="/src/img/assets/favicon.png" alt="Logo"></a>
+          <img class="text-header" src="/src/img/assets/mesasdepokercc.png" alt="mesasdepokercc">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,16 +29,16 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link" aria-current="page" href="/index.html">Inicio</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link" href="#cards">Productos</a>
+                <a class="nav-link" href="/index.html#cards">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#quienes-somos">Quienes Somos</a>
+                <a class="nav-link" href="/index.html#quienes-somos">Quienes Somos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#contactenos">Contáctenos</a>
+                <a class="nav-link" href="/index.html#contactenos">Contáctenos</a>
               </li>
             </ul>
           </div>
@@ -68,23 +69,38 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-11 fondo">
+            <div class="col-sm-6 col-md-11 mt-md-0 mt-sm-5 fondo">
                 <div class="products">
                     <div class="tab-content" id="v-pills-tabContent">
-                        <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
+                        <div class="tab-pane fade show active mt-5 mt-md-0" id="v-pills-home" role="tabpanel"
                             aria-labelledby="v-pills-home-tab" tabindex="0">
                             <h2>Mesas de Poker</h2>
-                            <div class="container" id="mesas-poker-container">
+                            <div class="row d-flex  justify-content-md-center p-1" id="mesas-poker-container">
 
                             </div>
                         
                         </div>
                         <div class="tab-pane fade" id="v-pills-profile" role="tabpanel"
-                            aria-labelledby="v-pills-profile-tab" tabindex="0"><h2>Ruletas</h2></div>
+                            aria-labelledby="v-pills-profile-tab" tabindex="0">
+                            <h2>Ruletas</h2>
+                            <div class="row d-flex  justify-content-md-center p-1" id="ruletas-container">
+
+                            </div>
+                        </div>
                         <div class="tab-pane fade" id="v-pills-messages" role="tabpanel"
-                            aria-labelledby="v-pills-messages-tab" tabindex="0"><h2>Ficheros</h2></div>
+                            aria-labelledby="v-pills-messages-tab" tabindex="0">
+                            <h2>Ficheros</h2>
+                            <div class="row d-flex  justify-content-md-center p-1" id="ficheros-container">
+
+                            </div>
+                        </div>
                         <div class="tab-pane fade" id="v-pills-settings" role="tabpanel"
-                            aria-labelledby="v-pills-settings-tab" tabindex="0"><h2>Accesorios</h2></div>
+                            aria-labelledby="v-pills-settings-tab" tabindex="0">
+                            <h2>Accesorios</h2>
+                            <div class="row d-flex  justify-content-md-center p-1" id="accesorios-container">
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
