Actualizamos quienes somos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body class="bg-black">
-  <a href="http://" class="fixed-whatsapp">
+  <a class="fixed-whatsapp" href="https://wa.me/5492213091050" target="_blank">
     <img src="src/img/assets/whatsapp.svg">
   </a>
   <header>
@@ -164,13 +164,11 @@
         <div class="row">
           <div class="col-md-8">
             <h2>Quiénes Somos</h2>
-            <p>En **MesasDePokerCC** somos apasionados del juego y de la experiencia que este genera. Creemos que cada
-              partida, sea de **poker, ruleta, punto y banca, burako o blackjack**, es una oportunidad para crear
-              momentos
-              inolvidables con amigos y familiares.</p>
-            <p>Por eso, nos dedicamos a la fabricación artesanal de **mesas de juego de alta calidad**, con diseños
-              únicos
-              y personalizables, para que disfrutes al máximo de tu pasión.</p>
+            <p>Somos una empresa dedicada a la fabricación de mesas de juegos estilo casino y hogareño, nuestro objetivo es crear experiencias 
+              y momentos únicos e inolvidables entre familiares, amigos o para sus clientes. Estamos ubicados en la ciudad de Las Flores provincia
+               de Buenos Aires desde el año 2018, despachamos nuestros productos hacia todo el país y exportamos a países limítrofes, brindamos seriedad,
+                transparencia, confidencialidad, atención personalizada y una variedad amplia para que todos nuestros clientes puedan encontrar el
+                  producto justo a su medida.</p>
           </div>
           <div class="col-md-4">
             <img src="src/img/assets/carpinteria.jpg" alt="carpinteria" style="border-radius: 100%; margin-left: 2vw;">
@@ -183,11 +181,11 @@
             <img src="src/img/assets/carpinteria2.jpg" alt="carpinteria" style="border-radius: 100%; margin-left: 2vw;">
           </div>
           <div class="col-md-8">
-            <h2>Nuestra historia</h2>
-            <p>Somos un emprendimiento joven que comenzó hace unos años con un sueño: crear mesas de juego que
-              combinaran
-              calidad, funcionalidad y estilo. Desde entonces, hemos trabajado con dedicación para convertirnos en una
-              referencia en el mercado.</p>
+            <p>A lo largo de los años, hemos cultivado una reputación de calidad y fiabilidad que nos distingue en el mercado. 
+              Cada mesa que sale de nuestras instalaciones es un testimonio de nuestro compromiso con la artesanía excepcional 
+              y la atención al detalle. Nos enorgullece ser parte de innumerables momentos de diversión y camaradería, y esperamos 
+              seguir siendo su elección preferida para crear experiencias de juego inolvidables en el futuro.
+              </p>
           </div>
         </div>
       </div>
@@ -210,9 +208,11 @@
         <ul>
           <li>Mesas de poker</li>
           <li>Mesas de ruleta</li>
+          <li>Mesas de truco</li>
           <li>Mesas de punto y banca</li>
           <li>Mesas de burako</li>
           <li>Mesas de blackjack</li>
+          <li>Mesas de arrime</li>
           <li>Accesorios como portavasos, ficheros, luces led, puertos USB</li>
         </ul>
       </div>
