--- a/src/html/productos.html
+++ b/src/html/productos.html
@@ -82,9 +82,19 @@
                         </div>
                         <div class="tab-pane fade" id="v-pills-profile" role="tabpanel"
                             aria-labelledby="v-pills-profile-tab" tabindex="0">
-                            <h2>Ruletas</h2>
-                            <div class="row d-flex  justify-content-md-center p-1" id="ruletas-container">
+                            <div class="card">
+                                <h5 class="card-header">Ruletas</h5>
+                                <div class="card-body">
+                                  <h5 class="card-title">Cilindros/Platos</h5>
+                                  <p class="card-text">500mm - 600mm - 800mm</p>
+                                  <p>Hogareños, reacondicionados y profesionales</p>
+                                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>
+                              </div>
+                            <h4></h4>
 
+                            <div class="row d-flex  justify-content-md-center p-1" id="ruletas-container">
+                            
                             </div>
                         </div>
                         <div class="tab-pane fade" id="v-pills-messages" role="tabpanel"
