Implementando ventana modal para ver las imagenes grandes.

--- a/src/html/productos.html
+++ b/src/html/productos.html
@@ -74,40 +74,32 @@
                     <div class="tab-content" id="v-pills-tabContent">
                         <div class="tab-pane fade show active mt-5 mt-md-0" id="v-pills-home" role="tabpanel"
                             aria-labelledby="v-pills-home-tab" tabindex="0">
-                            <h2>Mesas de Poker</h2>
-                            <div class="row d-flex  justify-content-md-center p-1" id="mesas-poker-container">
+                            <h2 class="text-style">Mesas de Poker</h2><br>
+                            <h5 class="text-style mb-3">Elige una mesa que te guste y contáctanos para personalizarla según tus preferencias.</h5>
+                            <div class="row d-flex  justify-content-md-center" id="mesas-poker-container">
 
                             </div>
                         
                         </div>
-                        <div class="tab-pane fade" id="v-pills-profile" role="tabpanel"
+                        <div class="tab-pane fade mt-5 mt-md-0" id="v-pills-profile" role="tabpanel"
                             aria-labelledby="v-pills-profile-tab" tabindex="0">
-                            <div class="card">
-                                <h5 class="card-header">Ruletas</h5>
-                                <div class="card-body">
-                                  <h5 class="card-title">Cilindros/Platos</h5>
-                                  <p class="card-text">500mm - 600mm - 800mm</p>
-                                  <p>Hogareños, reacondicionados y profesionales</p>
-                                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                                </div>
-                              </div>
-                            <h4></h4>
-
-                            <div class="row d-flex  justify-content-md-center p-1" id="ruletas-container">
+                            <h2 class="text-style">Ruletas</h2><br>
+                            <h5 class="text-style mb-3">Personaliza una mesa de ruleta o compra el accesorio que más te guste.</h5>
+                            <div class="row d-flex" id="ruletas-container">
                             
                             </div>
                         </div>
-                        <div class="tab-pane fade" id="v-pills-messages" role="tabpanel"
+                        <div class="tab-pane fade mt-5 mt-md-0" id="v-pills-messages" role="tabpanel"
                             aria-labelledby="v-pills-messages-tab" tabindex="0">
                             <h2>Ficheros</h2>
-                            <div class="row d-flex  justify-content-md-center p-1" id="ficheros-container">
+                            <div class="row d-flex" id="ficheros-container">
 
                             </div>
                         </div>
-                        <div class="tab-pane fade" id="v-pills-settings" role="tabpanel"
+                        <div class="tab-pane fade mt-5 mt-md-0" id="v-pills-settings" role="tabpanel"
                             aria-labelledby="v-pills-settings-tab" tabindex="0">
                             <h2>Accesorios</h2>
-                            <div class="row d-flex  justify-content-md-center p-1" id="accesorios-container">
+                            <div class="row d-flex  justify-content-md-center" id="accesorios-container">
 
                             </div>
                         </div>
@@ -120,6 +112,11 @@
 <footer>
 
 </footer>
+
+
+<div class="modal">
+    <img id="imgModal">
+</div>
 </body>
 
 
