--- a/index.html
+++ b/index.html
@@ -280,7 +280,8 @@
         <div class="col-12 col-md-4 text-center my-3 my-md-0">
           <a href="#"><img class="logo" src="src/img/assets/favicon.png" alt="Logo"></a>
           <img class="text-header" src="src/img/assets/mesasdepokercc.png" alt="mesasdepokercc">
-          <p class="mt-2">&copy; 2024 MesasDePokerCC.<br>Todos los derechos reservados.<br>Diseñado por Maesoft</p>
+          <p class="mt-2">&copy; 2024 MesasDePokerCC.<br>Todos los derechos reservados.
+            <br><br> Designed by <br> <img class="logo-small" src="src/img/assets/maesoft.png" alt="Logo"></p>
         </div>
         <div class="col-12 col-md-4">
           <div class="container-footer justify-content-sm-center align-items-xl-end">
